[project]
name = "robot-control-gui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiomqtt>=2.5.1",
    "dearpygui>=2.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "paramiko>=4.0.0",
    "pillow>=12.1.1",
    "psutil>=7.2.2",
]
